Switching over to Amazon Bedrock

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=ai-workshop
-spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.chat.options.model=gpt-4o
-
 spring.threads.virtual.enabled=true
+
+spring.ai.bedrock.aws.region=us-east-1
+spring.ai.bedrock.aws.access-key=${AMAZON_ACCESS_KEY}
+spring.ai.bedrock.aws.secret-key=${AMAZON_SECRET_KEY}
+spring.ai.bedrock.aws.timeout=10m
+spring.ai.bedrock.titan.chat.enabled=true
+spring.ai.bedrock.titan.embedding.enabled=true
