Workshop starting code for Bedrock

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.ai.bedrock.aws.secret-key=${AMAZON_SECRET_KEY}
 spring.ai.bedrock.aws.timeout=10m
 spring.ai.bedrock.titan.chat.enabled=true
 spring.ai.bedrock.titan.embedding.enabled=true
+spring.ai.bedrock.titan.chat.model=g1
