--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=ai-workshop
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4o
 spring.threads.virtual.enabled=true
+
+spring.ai.ollama.chat.model=bespokeai/minicheck
+spring.ai.ollama.chat.temperature=0.1
