Adding a custom advisor example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.threads.virtual.enabled=true
 
 spring.ai.ollama.chat.model=bespokeai/minicheck
 spring.ai.ollama.chat.temperature=0.1
+
+logging.level.dev.danvega.workshop=DEBUG
