Working but factCheck

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,12 @@
 		<spring-ai.version>1.1.0</spring-ai.version>
 	</properties>
 	<dependencies>
-		<dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
