Tests passing again so far.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ai-workshop
 spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.chat.options.model=gpt-4o
+spring.ai.openai.chat.options.model=gpt-4o-mini
 spring.threads.virtual.enabled=true
-
 spring.ai.ollama.chat.model=bespokeai/minicheck
-spring.ai.ollama.chat.temperature=0.1
+spring.ai.ollama.chat.options.temperature=0.1
+spring.ai.ollama.base-url=http://localhost:11434
 
 logging.level.dev.danvega.workshop=DEBUG
